# recruiting-with-claude

./: AGENTS.md  CLAUDE.md  README.md
.claude/skills/outreach-writer/my-examples/: software-engineer.md
.obsidian/: community-plugins.json  workspace.json
integrations/airtable-cli/: README.md  pyproject.toml
integrations/airtable-cli/src/airtable_cli/: __main__.py  auth.py  cli.py  client.py  errors.py  retry.py
integrations/airtable-cli/src/airtable_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
integrations/airtable-cli/tests/: test_cli.py  test_client.py  test_errors.py  test_retry.py
knowledge-base/: company.md  outreach-messages.md  recruiting.md  sourcing.md  team.md  templates.md  tone-of-voice.md
knowledge-base/company/: culture.md  overview.md  products.md
knowledge-base/recruiting/: best-practices.md  process.md  scorecards.md
knowledge-base/team/: engineering.md  hiring-managers.md  structure.md
knowledge-base/tone-of-voice/: examples.md  guidelines.md
